@@ -95,7 +95,6 @@ struct sd_bus_message {
 
         sd_bus_creds creds;
 
-        usec_t monotonic;
         usec_t realtime;
         uint64_t seqnum;
         int64_t priority;
